--- a/src/com.robertocpaes.pterodactyl.sdPlugin/app.html
+++ b/src/com.robertocpaes.pterodactyl.sdPlugin/app.html
@@ -17,6 +17,8 @@
 	<script src="libs/js/api.js"></script>
     <script src="libs/js/stream-deck.js"></script>
 	<script src="libs/js/action.js"></script>
+    <script src="libs/js/pterodactyl.js"></script>
+
     <script src="app.js"></script>
 </body>
 
